--- a/tiny/home.html
+++ b/tiny/home.html
@@ -3,5 +3,16 @@
 <body> 
 <img align="middle" src="godzilla.gif">
 Dave O'Hallaron
+<div>
+    Adder Function
+    <form action="./cgi-bin/adder" method="GET">
+        <label for = "num1">1st num: </label>
+        <input type="text" name="num1" id="num1">
+        <label for = "num2">2nd num: </label>
+        <input type="text" name="num2" id="num2">
+        <input type="submit" value="Add">
+
+    </form>
+</div>
 </body>
 </html>
